<resources>
    <string name="app_name">Luwi</string>
    <string name="welcome">Welcome to the Nyumba Kumi app</string>
    <string name="test_the_toaster_here">Test the toaster here</string>
    <string name="navigate">Navigate</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="list_of_available_users">List of available users</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Register</string>
    <string name="register_an_account_with_us">Register an account with us...</string>
    <string name="welcome_back_please_enter_details">welcome back, please enter details...</string>
    <string name="home_page">Home page</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="logout">Logout</string>
    <string name="open_gmail">Open gmail</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nyumba Kumi Tool</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="groups">Groups</string>
    <string name="users">Users</string>
    <string name="report_image" />
    <string name="image">image</string>
    <string name="threads">Threads</string>
    <string name="profile_image_desc" />
    <string name="edit_image_desc">Edit image</string>
    <string name="edit_email_desc">Edit email</string>
    <string name="loading">Loading...</string>
    <string name="edit_username_desc">Edit username</string>
</resources>